name:                pure-variance
version:             0.7.0.0
synopsis:            Styled views
homepage:            github.com/grumply/pure-variance
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Pure.Variance

  build-depends:
      base >=4.8
    , pure-txt >= 0.7 && < 1
    , pure-json >= 0.7 && < 1
    , deepseq
    , unordered-containers
    , vector


  hs-source-dirs:      src
  default-language:    Haskell2010