name:                pure-variance
version:             0.8.0.0
synopsis:            Styled views
homepage:            purehs.org/doc/pure-variance
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-variance.git

library
  exposed-modules:
      Pure.Variance
      Pure.Covariance

  build-depends:
      base
    , pure-txt
    , pure-json
    , unordered-containers
    , containers
    , pure-txt-trie
    , vector

  default-extensions:
    RecordWildCards
    ViewPatterns
    DeriveAnyClass
    DeriveGeneric
    TypeOperators
    DefaultSignatures
    FlexibleInstances
    TypeSynonymInstances
    UndecidableInstances
    DataKinds
    FlexibleContexts
    TypeFamilies

  hs-source-dirs:      src
  default-language:    Haskell2010
